--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
-project(loan_system)
+project(bank_system)
 
 # Define o padrão C++
 set(CMAKE_CXX_STANDARD 17)
@@ -14,6 +14,8 @@ endif()
 
 # Adiciona o diretório de include do SQLite
 include_directories(${CMAKE_SOURCE_DIR}/sqlite3/include)
+include_directories(${CMAKE_SOURCE_DIR}/models)
+include_directories(${CMAKE_SOURCE_DIR}/database)
 
 # Adiciona o arquivo fonte do SQLite com flags específicas
 add_library(sqlite3 STATIC sqlite3/include/sqlite3.c)
@@ -40,6 +42,7 @@ add_executable(bank_system
     main.cpp
     ${COMMON_SOURCES}
     ${HEADERS}
+    sqlite3/include/sqlite3.c
 )
 
 # Cria o executável de visualização (view_data)
@@ -71,4 +74,11 @@ target_include_directories(view_data PRIVATE
 # Configura o diretório de saída para a pasta principal
 set_target_properties(bank_system view_data PROPERTIES
     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}"
-) 
+)
+
+# Adiciona suporte ao filesystem
+if(MSVC)
+    target_compile_options(bank_system PRIVATE /std:c++17)
+else()
+    target_link_libraries(bank_system stdc++fs)
+endif() 
